--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
         "discord.js": "^14.14.1",
         "dotenv": "^16.3.1",
         "drizzle-orm": "^0.29.2",
-        "pg": "^8.11.3"
+        "pg": "^8.11.3",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/pg": "^8.10.9",
+        "@typescript-eslint/eslint-plugin": "^6.16.0",
+        "@typescript-eslint/parser": "^6.16.0",
         "drizzle-kit": "^0.20.9",
-        "tsx": "^4.7.0"
+        "eslint": "^8.56.0",
+        "tsx": "^4.7.0",
+        "typescript": "^5.3.3"
     }
 }
