--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es2022",
-        "module": "ESNext",
+        "target": "ES6",
+        "module": "CommonJS",
         "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
         "skipLibCheck": true,
         "sourceMap": true,
@@ -23,6 +23,6 @@
         "resolveJsonModule": true,
         "baseUrl": "."
     },
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules", "dist"],
     "include": ["./src/**/*.ts", ".eslintrc.cjs", "drizzle.config.ts"]
 }
