--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "register:all": "tsx ./src/scripts/index.ts",
         "start:dev": "tsx watch src/app.ts",
-        "start": "tsx src/app.ts",
+        "build": "tsc",
+        "start": "node dist/src/app.js",
         "drizzle:push": "drizzle-kit push:pg"
     },
     "keywords": [],
