--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start:dev": "tsx watch src/app.ts",
         "build": "tsc",
         "start": "node dist/src/app.js",
-        "drizzle:push": "drizzle-kit push:pg"
+        "db:push": "drizzle-kit push:pg",
+        "db:studio": "drizzle-kit studio"
     },
     "keywords": [],
     "author": "",
